force-app/main/default/objects/Account/fields/Overdue_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_90_Days__c</fullName>
    <description>Amount of receivables overdue &gt; 90 days. Synced from Odoo via IP-5. Read-only in SF.</description>
    <label>Overdue 90 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>