force-app/main/default/objects/Account/fields/Parent_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Group Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Group_Children</relationshipName>
    <type>Lookup</type>
</CustomField>