force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Agreed billing payment terms for this account. Drives invoice due-date calculation in billing.</description>
    <inlineHelpText>Agreed payment terms for this account. Set during commercial negotiation and confirmed at KYC approval stage.</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>21 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
                <default>true</default>
                <label>30 Days</label>
            </value>
            <value>
                <fullName>End of Current Month</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>50 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>End of Following Month</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>