force-app/main/default/objects/Account/fields/Portal_Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Portal_Admin_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPEv2 Portal Admin (PAA)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Portal_Admin_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>