force-app/main/default/objects/Account/fields/Portal_Code__c.field-meta.xml
<CustomField>
    <fullName>Portal_Code__c</fullName>
    <label>Portal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>