force-app/main/default/objects/Account/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dedicated reseller pricebook per market. Blank = use default market pricebook.</description>
    <inlineHelpText>Dedicated reseller pricebook per market. Blank = use default market pricebook.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>