force-app/main/default/objects/Account/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary business contact for this Account. Should be set during Account onboarding and maintained as contacts change.</description>
    <inlineHelpText>The designated primary contact for this Account. Used as the default contact on new Opportunities and Orders.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary For Accounts</relationshipLabel>
    <relationshipName>Primary_For_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>