force-app/main/default/objects/Account/fields/Re_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Re_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Engagement</label>
    <type>Checkbox</type>
</CustomField>