force-app/main/default/objects/Account/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <formula>SUBSTITUTE(RecordType.DeveloperName, &quot;_&quot;, &quot; &quot;)</formula>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>