force-app/main/default/objects/Account/fields/Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee__c</fullName>
    <description>Agreed referral fee for this partner. Entered as a percentage or flat amount depending on the partner agreement.</description>
    <inlineHelpText>The referral fee agreed with this partner.</inlineHelpText>
    <label>Referral Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>