force-app/main/default/objects/Account/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE when the account is a referral partner. Aligned with Odoo boolean column. Decoupled from record type - an account can be both a customer and a referral partner.</description>
    <inlineHelpText>Checked when this account refers business to DE. Referral partners may or may not be customers themselves. Aligned with Odoo Referral Partner flag.</inlineHelpText>
    <label>Referral Partner</label>
    <type>Checkbox</type>
</CustomField>