force-app/main/default/objects/Account/fields/Referral_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_Status__c</fullName>
    <description>Status of the referral partnership agreement. Tracks whether the LOV has been signed or is still under review.</description>
    <inlineHelpText>Current status of the referral partner agreement.</inlineHelpText>
    <label>Referral Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsigned</fullName>
                <default>true</default>
                <label>Unsigned</label>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>