force-app/main/default/objects/Account/fields/Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address__c</fullName>
    <description>Free-text registered office address. Locked after Entity_Locked__c = TRUE.</description>
    <label>Registered Office Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>