force-app/main/default/objects/Account/fields/Reseller_Discount_Authority__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Discount_Authority__c</fullName>
    <description>Required for Reseller record type. Max additional discount % before escalation</description>
    <label>Reseller Discount Authority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>