force-app/main/default/objects/Account/fields/Reseller_Flag__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-set TRUE for Reseller record type via Flow. Read-only on layout.</description>
    <label>Reseller Flag</label>
    <type>Checkbox</type>
</CustomField>