force-app/main/default/objects/Account/fields/Reseller_Markup__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Markup__c</fullName>
    <label>Reseller Markup (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>