force-app/main/default/objects/Account/fields/Reseller_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pricebook assigned to this reseller account containing DE wholesale rates. Applied automatically to quotes created for this reseller.</inlineHelpText>
    <label>Reseller Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Reseller Accounts</relationshipLabel>
    <relationshipName>Reseller_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>