force-app/main/default/objects/Account/fields/Reseller_Status__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Status__c</fullName>
    <description>Replaces Reseller_Flag__c checkbox. Tracks whether a reseller agreement exists with this account. Used on Customer and End Customer record types.</description>
    <inlineHelpText>Indicates whether this account has a reseller agreement with Digital Edge. Unsigned = pending agreement. Signed = active reseller agreement in place.</inlineHelpText>
    <label>Reseller Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsigned</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>