force-app/main/default/objects/Account/fields/Security_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Amount__c</fullName>
    <description>Required if Security_Deposit_Required__c = TRUE via validation rule</description>
    <label>Security Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>