force-app/main/default/objects/Account/fields/Security_Deposit_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Approval_Status__c</fullName>
    <label>Security Deposit Approval Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>