force-app/main/default/objects/Account/fields/Security_Deposit_Invoice_Ref__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Invoice_Ref__c</fullName>
    <description>Reference to Odoo security deposit invoice.</description>
    <externalId>true</externalId>
    <label>Security Deposit Invoice Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>