force-app/main/default/objects/Account/fields/Security_Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Deposit Received</label>
    <type>Checkbox</type>
</CustomField>