force-app/main/default/objects/Account/fields/Security_Deposit_Required__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if security deposit is a contractual requirement.</description>
    <inlineHelpText>TRUE if security deposit is a contractual requirement</inlineHelpText>
    <label>Security Deposit Required</label>
    <type>Checkbox</type>
</CustomField>