force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Account lifecycle status aligned with Odoo (BOSS). Active/Inactive/Prospect are the three operational states.</description>
    <inlineHelpText>Current state of this account. Active = paying customer with live services. Inactive = no active services or contracts. Prospect = potential customer in pipeline.</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>