force-app/main/default/objects/Account/fields/Strategic_Account_Flag__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags this as a strategic account. Used on Global parent accounts for reporting.</description>
    <inlineHelpText>Check for accounts designated as strategic accounts at the global parent level. Used for executive reporting and strategic account management programs.</inlineHelpText>
    <label>Strategic Account</label>
    <type>Checkbox</type>
</CustomField>