force-app/main/default/objects/Account/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <label>Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>AI-ML</fullName>
            </value>
            <value>
                <fullName>CDN</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Media &amp; Gaming</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>