force-app/main/default/objects/Account/fields/Tax_Exemption_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Status__c</fullName>
    <description>Tax exemption classification for invoice tax treatment. Non-Standard values require exemption certificate upload before Finance Approval can complete.</description>
    <inlineHelpText>Customer&apos;s tax treatment. Exempt or non-standard statuses require an exemption certificate to be attached before Finance Approval. Standard = full applicable tax applies.</inlineHelpText>
    <label>Tax Exemption Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Withholding Only</fullName>
            </value>
            <value>
                <fullName>Reverse Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>