force-app/main/default/objects/Account/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <description>Tax ID / Business Registration Number. Duplicate check on this field at Account level.</description>
    <inlineHelpText>Tax ID / Business Registration Number. Duplicate check on this field at Account level.</inlineHelpText>
    <label>Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>