force-app/main/default/objects/Account/fields/Total_Active_Quoted_MRC__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Quoted_MRC__c</fullName>
    <description>Sum of Total_MRC__c across all active (Draft, In Review, Approved, Presented) Quotes for this Account. Maintained by Quote_AfterSave_CreditRollup flow. Used in cumulative credit limit check.</description>
    <inlineHelpText>Total MRC across all active quotes for this account. Used to evaluate credit limit compliance.</inlineHelpText>
    <label>Total Active Quoted MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>