force-app/main/default/objects/Account/fields/Translated_Name__c.field-meta.xml
<CustomField>
    <fullName>Translated_Name__c</fullName>
    <description>Account name in the preferred local language, such as Japanese, Korean, Simplified Chinese, or Traditional Chinese.</description>
    <inlineHelpText>Enter the account name in the language selected in Preferred Language.</inlineHelpText>
    <label>Translated Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>