force-app/main/default/objects/Account/fields/UEN__c.field-meta.xml
<CustomField>
    <fullName>UEN__c</fullName>
    <description>Singapore Unique Entity Number (UEN). Required for SG customers. Passed to Odoo invoice generation for SG entities.</description>
    <inlineHelpText>Unique Entity Number issued by ACRA for Singapore-registered entities. Required for SG customers before Finance Approval. Format: 9 or 10 alphanumeric characters.</inlineHelpText>
    <label>UEN (Singapore)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>