force-app/main/default/objects/Account/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Cross-entity brand grouping name from Odoo (BOSS). Groups related accounts under a single logical business entity across subsidiaries and countries. Free text - values are managed in Odoo and synced via the Account integration.</description>
    <inlineHelpText>The brand or company group name that links this account to related entities across DE subsidiaries. Synced from BOSS.</inlineHelpText>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>