force-app/main/default/objects/Account/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <description>VAT/GST registration number for applicable jurisdictions. Passed to Odoo invoice generation. Not required for standard APAC markets (HK, SG, JP, KR, PH, ID).</description>
    <inlineHelpText>VAT or GST registration number for non-APAC customers and jurisdictions where VAT applies. Printed on invoices where required by local tax regulations.</inlineHelpText>
    <label>VAT / GST Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>