force-app/main/default/objects/Account/fields/Waiver_Type__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Type__c</fullName>
    <description>Audit trail for which waiver condition was used in Finance Approval. Set by F-05.</description>
    <inlineHelpText>Records the credit waiver condition that was applied during Finance approval for this account. Set automatically by the Finance Approval flow. Audit use only.</inlineHelpText>
    <label>Waiver Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Previous_Credit_Check</fullName>
                <label>Previous Credit Check</label>
            </value>
            <value>
                <fullName>Below_Default_Limit</fullName>
                <label>Below Default Limit</label>
            </value>
            <value>
                <fullName>Fortune_500</fullName>
                <label>Fortune 500</label>
            </value>
            <value>
                <fullName>Security_Deposit</fullName>
                <label>Security Deposit</label>
            </value>
            <value>
                <fullName>NRC_Prepayment</fullName>
                <label>NRC Prepayment</label>
            </value>
            <value>
                <fullName>Legal_Review_Required</fullName>
                <label>Legal Review Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>