force-app/main/default/objects/Account/recordTypes/Competitor.recordType-meta.xml
<RecordType>
    <fullName>Competitor</fullName>
    <active>true</active>
    <description>Competitor accounts - companies competing against Digital Edge in active deals.</description>
    <label>3 - Competitor</label>
</RecordType>