force-app/main/default/objects/Account/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <description>Direct end-customers of Digital Edge. Standard billing and contracting flow. This is the primary record type.</description>
    <label>1 - Customer</label>
</RecordType>