force-app/main/default/objects/Account/recordTypes/DE_Entity.recordType-meta.xml
<RecordType>
    <fullName>DE_Entity</fullName>
    <active>true</active>
    <description>Digital Edge legal entities (subsidiaries). Records of this type represent DE contracting companies: DE HK Ltd, DE SG Pte Ltd, DE KR Co Ltd, DE PH Inc, DE ID PT, DE JP KK. Used as the contracting party on Opportunity.DE_Entity__c.</description>
    <label>DE Entity</label>
</RecordType>