force-app/main/default/objects/Account/recordTypes/End_Customer.recordType-meta.xml
<RecordType>
    <fullName>End_Customer</fullName>
    <active>true</active>
    <description>End customer of colocation services when sold through a reseller or channel partner. The reseller is the contractual counterparty; the end customer is the actual user of the space.</description>
    <label>2 - End Customer</label>
</RecordType>