force-app/main/default/objects/Account/recordTypes/Referral_Partner.recordType-meta.xml
<RecordType>
    <fullName>Referral_Partner</fullName>
    <active>true</active>
    <description>Referral partners who refer deals to DE but do not contract directly. Referral fee tracking only. No Finance approval required.</description>
    <label>4 - Referral Partner</label>
</RecordType>