force-app/main/default/objects/Account/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <description>Vendor accounts for supplier management. Out of scope for Phase 1. Created now to avoid schema changes later.</description>
    <label>5 - Vendor</label>
</RecordType>