force-app/main/default/objects/Account/validationRules/Security_Deposit_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Security_Deposit_Amount_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Security_Deposit_Required__c = TRUE, ISBLANK(Security_Deposit_Amount__c))</errorConditionFormula>
    <errorDisplayField>Security_Deposit_Amount__c</errorDisplayField>
    <errorMessage>Security Deposit Amount is required when Security Deposit Required is checked.</errorMessage>
</ValidationRule>