force-app/main/default/objects/Account/validationRules/Tax_ID_Required_On_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_ID_Required_On_Lock</fullName>
    <active>true</active>
    <description>Tax_ID__c must be populated before Entity_Locked__c can be set to TRUE. Prevents locking an entity without a Tax ID on record.</description>
    <errorConditionFormula>AND(ISCHANGED(Entity_Locked__c), Entity_Locked__c = TRUE, ISBLANK(Tax_ID__c))</errorConditionFormula>
    <errorMessage>Tax ID is required before this account can be locked. Enter the Tax ID and save before locking the entity.</errorMessage>
</ValidationRule>