force-app/main/default/objects/Account/validationRules/VR_ACC_01_TaxID_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC_01_TaxID_Locked</fullName>
    <active>true</active>
    <description>VR-ACC-01: Prevents Tax ID change after Finance Approval.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Tax_ID__c), Entity_Locked__c)</errorConditionFormula>
    <errorDisplayField>Tax_ID__c</errorDisplayField>
    <errorMessage>Tax ID cannot be changed after Finance Approval has been granted. Contact Finance to re-run the approval process.</errorMessage>
</ValidationRule>