force-app/main/default/objects/Account/validationRules/VR_ACC_02_Name_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC_02_Name_Locked</fullName>
    <active>true</active>
    <description>VR-ACC-02: Prevents Account Name change after Finance Approval.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Name), Entity_Locked__c)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name (legal entity name) cannot be changed after Finance Approval. Contact Finance to re-run the approval process.</errorMessage>
</ValidationRule>