force-app/main/default/objects/Account/validationRules/VR_ACC_03_Address_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC_03_Address_Locked</fullName>
    <active>true</active>
    <description>VR-ACC-03: Prevents billing address change after Finance Approval.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), OR(ISCHANGED(BillingStreet), ISCHANGED(BillingCity), ISCHANGED(BillingPostalCode), ISCHANGED(BillingCountry)), Entity_Locked__c)</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Registered address cannot be changed after Finance Approval. Contact Finance to re-run the approval process.</errorMessage>
</ValidationRule>